--- a/app/styles/card.css
+++ b/app/styles/card.css
@@ -50,6 +50,7 @@
   text-align: center;
   text-decoration: none;
   cursor: pointer;
+  transition: color 0.3s, background 0.3s;
 }
 
 .remove-card-btn:hover {
