--- a/app/styles/list.css
+++ b/app/styles/list.css
@@ -24,11 +24,10 @@
   cursor: pointer;
   margin-left: 43%;
   opacity: 0.5;
-  transition: opacity 0.3s
+  transition: opacity 0.5s
 }
 
 .add-card-btn:hover {
   opacity: 1;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-  transition: opacity 0.3s, box-shadow 0.3s;
+  transition: opacity 0.5s;
 }
