--- a/app/styles/card.css
+++ b/app/styles/card.css
@@ -1,7 +1,7 @@
 .card {
    position: relative;
-   overflow: auto;
-   width: 180px;
+   width: 251px;
+   word-wrap: break-word;
    display: inline-block;
    background: white;
    margin: 10px;
