--- a/app/styles/card.css
+++ b/app/styles/card.css
@@ -1,12 +1,21 @@
 .card {
    position: relative;
-   width: 251px;
+   width: 256px;
    word-wrap: break-word;
    display: inline-block;
    background: white;
    margin: 10px;
-   padding: 15px 15px 15px 10px;
+   padding: 8px 7px 15px 10px;
    box-shadow: 5px 5px 5px rgba(0,0, 0, 0.25);
+}
+
+.card-title {
+  display: inline-block;
+  margin-bottom: 8px;
+}
+
+.card-description {
+  margin-left: 13px;
 }
 
 .card-enter {
@@ -50,7 +59,7 @@
   text-align: center;
   text-decoration: none;
   cursor: pointer;
-  opacity: 0.5;
+  opacity: 0.2;
   transition: opacity 0.5s, color 0.3s, background 0.3s;
 }
 
