--- a/app/styles/preview-card.css
+++ b/app/styles/preview-card.css
@@ -5,3 +5,13 @@
   width: 300px;
   box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
 }
+
+.preview-card-ver-line {
+  height: 300px;
+  position: fixed;
+  height: 300px;
+  box-shadow: inset 0 0 0 5px rgba(0, 0, 0, 0.25);
+  margin-left: 15px;
+  height: 500px;
+  width: 6px;
+}
